# supernova

./: Cargo.toml  README.md
.github/workflows/: build-and-test.yml
src/: ast.rs  cli.rs  diag.rs  file.rs  lib.rs  location.rs  main.rs  parse.rs  sema.rs  sourcemap.rs  util.rs
src/ast/: visit.rs
src/parse/: cursor.rs  lexer.rs  parser.rs  token.rs
src/sema/: check_exhaustiveness.rs  diag.rs  error.rs  feature.rs  load_ast.rs  process_features.rs  resolve.rs  ty.rs  typeck.rs
tests/programs/: ambiguous-ty-as-bot.stella  duplicate-annotation.stella  duplicate-extension.stella  duplicate-fields.stella  let-non-irrefutable.stella  main-binary.stella  main-nullary.stella  missing-main.stella  no-language.stella  panic.stella  tuple-index-too-large.stella  unknown-extension.stella  unknown-language.stella
tests/programs/exceptions/: duplicate-exc-ty-decl.stella  duplicate-exc-variant-label.stella  exc-ty-decl-no-decl.stella  exc-ty-decl-with-open-variant-exc.stella  exc-ty-decl.stella  no-decl.stella  open-variant-exc-no-decl.stella  open-variant-exc.stella  try-catch-non-exhaustive.stella
tests/programs/exhaustiveness/: ascription.stella  bool.stella  cast.stella  list.stella  misc.stella  nat.stella  record.stella  sum.stella  tuple.stella  unit.stella  variant.stella
tests/programs/missing-features/: ascriptions.stella  casts.stella  exceptions.stella  fixpoint-combinator.stella  let-bindings.stella  letrec-bindings.stella  lists.stella  literals.stella  multiparameter-functions-do-not-imply-nullary.stella  (+21 more)
tests/runner/: cli.rs  directive.rs  main.rs
(+109 files in other folders)
