[package]
name = "supernova"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
codespan = "0.12.0"
codespan-reporting = "0.12.0"
derive_more = { version = "2.0.1", features = ["display", "from"] }
fxhash = "0.2.1"
num = "0.4.3"
num-bigint = "0.4.6"
phf = { version = "0.11.3", features = ["macros"] }
slotmap = "1.0.7"
strum = { version = "0.27.1", features = ["derive"] }
termcolor = "1.4.1"
thiserror = "2.0.11"
yansi = "1.0.1"

[[test]]
name = "test-runner"
path = "tests/runner/main.rs"
harness = false

[dev-dependencies]
glob = "0.3.2"
regex = "1.11.1"
